--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "my-next-app",
+  "name": "my-express-app",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "node server.js"
   },
   "dependencies": {
-    "next": "^13.1.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.21.1",
+    "pg": "^8.13.1"
   },
   "engines": {
     "node": "20.x"
